--- a/teenempowerment/css/main.css
+++ b/teenempowerment/css/main.css
@@ -2,16 +2,16 @@ body {
   margin: 0 px auto;
 }
 header {
-  background-image: url(../img/img2.jpg);
+background-image: url(../img/img2.jpg);
 background-repeat: no-repeat;
 background-size: cover;
 }
-.categories{
+.categories {
   display: flex;
   flex-direction: row;
   justify-content: space-around;
 }
-.pic{
+.pic {
   width: 250px;
   height: 250px;
   overflow: hidden;
@@ -19,7 +19,7 @@ background-size: cover;
 img {
   width: 100%;
 }
-.about.pic{
+.about.pic {
   width: 1725px;
   height:250px;
   margin: 60px;
@@ -42,10 +42,19 @@ img {
   float: right;
 }
 .nav2 {
+  display: flex;
+  flex-direction: row;
   float: right;
   width: 20%;
   clear: both;
 }
 h1 {
   clear: both;
+}
+.stories {
+display: flex;
+flex-direction: row;
+}
+h4{
+  margin: 22px 0px -20px 0px;
 }
